--- a/engines/madmp_opidor/config/templates/DMPResearchProject-template.json
+++ b/engines/madmp_opidor/config/templates/DMPResearchProject-template.json
@@ -1,10 +1,10 @@
 {
     "$schema": "http://json-schema.org/draft-07/schema#",
     "$id": "../Documentation/Implementation/data_model/Json/",
-    "title": "DMPStandard",
-    "description": "DMPStandard template",
+    "title": "DMPResearchProject",
+    "description": "DMPResearchProject template",
     "type": "object",
-    "class": "DMPStandard",
+    "class": "DMPResearchProject",
     "properties": {
         "identifier": {
             "type": "number",
