--- a/package.json
+++ b/package.json
@@ -74,18 +74,7 @@
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-webpack-plugin": "^2.6.0",
-    "jasmine": "^4.2.1",
-    "jasmine-core": "^4.2.0",
-    "karma": "^6.3.14",
-    "karma-babel-preprocessor": "^8.0.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-fixture": "^0.2.6",
-    "karma-html2js-preprocessor": "^1.1.0",
-    "karma-jasmine": "^5.1.0",
-    "karma-jquery": "^0.2.4",
-    "karma-json-fixtures-preprocessor": "^0.0.6",
-    "karma-webpack": "^5.0.0"
+    "eslint-webpack-plugin": "^2.6.0"
   },
   "resolutions": {
     "webpack": "^5.75.0"
