--- a/nginx/default.template
+++ b/nginx/default.template
@@ -43,13 +43,14 @@ server {
   }
 
   location @rails {
-    proxy_set_header X-Real-IP  $remote_addr;
+    proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
     proxy_pass http://dmpopidor:3000;
   }
-  # enables WS support
+
+  # Enables WS support
   location /cable {
     proxy_pass http://dmpopidor:3000;
     proxy_http_version 1.1;
@@ -57,5 +58,15 @@ server {
     proxy_set_header Connection Upgrade;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+
+  location /directus/ {
+    proxy_pass http://directus:8055/;
+  }
+
+  location /health {
+    access_log off;
+    add_header 'Content-Type' 'application/json';
+    return 200 '{ "status": "Healthy" }';
   }
 }
