chore: updating directus volume and docs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,7 +93,7 @@ services:
       - DB_DATABASE=${DIRECTUS_DATABASE:-directus}
       - PUBLIC_URL=http://${DMP_SERVER_NAME:-0.0.0.0}:${NGINX_PORT:-8080}/directus
     volumes:
-      - ./data/directus/uploads:/directus/uploads
+      - ./directus/data/uploads:/directus/uploads
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8055/server/health || exit 1" ]
       interval: ${DIRECTUS_HEALTHCHECK_INTERVAL:-10s}
