Upgrade github actions node version to 18

--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -25,7 +25,7 @@ jobs:
     # Install Node
     - uses: actions/setup-node@v3
       with:
-        node-version: '16.6.0'
+        node-version: 18
         cache: 'yarn'
 
     # Copy all of the example configs over
