--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -44,7 +44,7 @@ jobs:
     # Install Node
     - uses: actions/setup-node@v3
       with:
-        node-version: '16.6.0'
+        node-version: 18
         cache: 'yarn'
 
     # Install the Postgres developer packages
