Disable Spring during workflows/ db build
Here are links to the errors being raised prior to this commit:
https://github.com/DMPRoadmap/roadmap/actions/runs/9822436610/job/27119190298?pr=3435
https://github.com/DMPRoadmap/roadmap/actions/runs/9822436613/job/27119190303?pr=3435
https://github.com/DMPRoadmap/roadmap/actions/runs/9844975903/job/27179509035?pr=3435

--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -54,8 +54,8 @@ jobs:
 
     - name: 'Build out the test database'
       run: |
-        bundle exec rails db:create RAILS_ENV=test
-        bundle exec rails db:schema:load RAILS_ENV=test
+        DISABLE_SPRING=1 bundle exec rails db:create RAILS_ENV=test
+        DISABLE_SPRING=1 bundle exec rails db:schema:load RAILS_ENV=test
 
     - name: 'Run any pending database migrations'
       run: bin/rails db:migrate RAILS_ENV=test
