--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -79,7 +79,7 @@ jobs:
     # Initialize the DB
     - name: 'Setup Test DB'
       run: |
-        bundle exec rails db:setup RAILS_ENV=test
+        DISABLE_SPRING=1 bundle exec rails db:setup RAILS_ENV=test
         bundle exec rails db:migrate RAILS_ENV=test
 
     # Prebuild the CSS, JS and image assets
