--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ public/assets/*
 public/fonts/*
 public/images/*
 public/javascripts/*
+public/tinymce/skins/
 public/stylesheets/*
 public/system/*
 public/videos/*
