Migrate to RuboCop extensions using plugins
This change addresses the following warning:

```
rubocop-performance extension supports plugin, specify `plugins: rubocop-performance` instead of `require: rubocop-performance` in /path/to/file/.rubocop.yml.
For more information, see https://docs.rubocop.org/rubocop/plugin_migration_guide.html.
```

- The docs point out that "The plugin system was introduced in RuboCop 1.72". Commit eb23992404bc913d60277ef090f16a35a0010856 bumped Rubocop from v1.66.1 to v1.74.0, so it makes sense that we are suddenly seeing this warning.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,7 +23,7 @@
 #
 # Try to place any new Cops under their relevant section and in alphabetical order
 
-require:
+plugins:
 #   - rubocop-rails
 #   - rubocop-rspec
   - rubocop-performance
