TEMP: Lower Chrome Version for Postgres GH Action
- This change provides a temporary workaround for the following GitHub Issue: https://github.com/DMPRoadmap/roadmap/issues/3485
- This commit should be reverted once our tests are able to run successfully with the latest version of Chrome.

--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -75,6 +75,18 @@ jobs:
     - name: 'Yarn Install'
       run: |
         yarn install
+    
+    # TEMPORARY WORKAROUND FOR THE FOLLOWING ISSUE: https://github.com/DMPRoadmap/roadmap/issues/3485
+    # Remove this once our tests are compatible with the new version of Chrome
+    # Source: https://github.com/teamcapybara/capybara/issues/2800#issuecomment-2731100953
+    - name: Remove image-bundled Chrome
+      run: sudo apt-get purge google-chrome-stable
+    - name: Setup stable Chrome
+      uses: browser-actions/setup-chrome@v1
+      with:
+        chrome-version: 128
+        install-chromedriver: true
+        install-dependencies: true
 
     # Initialize the DB
     - name: 'Setup Test DB'
