Install `imagemagick` in Postgres Workflow
- `imagemagick` is not pre-installed with `ubuntu-24.04`. However, it is required to resolve the following test failures:

```
Failures:

  1) OrgsController PUT /org/admin/:id/admin_update succeeds for feedback changes
     Failure/Error: return if logo.nil? || logo.height == 100

     Dragonfly::Shell::CommandFailed:
       Command failed: identify -ping -format \%m\ \%w\ \%h /tmp/RackMultipart20250324-4505-2x6nam.png, exit status: 127, error: sh: 1: identify: not found
     # ./app/models/org.rb:357:in `resize_image'
     # ./app/controllers/orgs_controller.rb:81:in `admin_update'
     # ./spec/controllers/orgs_controller_spec.rb:60:in `block (3 levels) in <main>'

  2) OrgsController PUT /org/admin/:id/admin_update updates the shibboleth entityID if super_admin and enabled
     Failure/Error: return if logo.nil? || logo.height == 100

     Dragonfly::Shell::CommandFailed:
       Command failed: identify -ping -format \%m\ \%w\ \%h /tmp/RackMultipart20250324-4505-gp3t74.png, exit status: 127, error: sh: 1: identify: not found
     # ./app/models/org.rb:357:in `resize_image'
     # ./app/controllers/orgs_controller.rb:81:in `admin_update'
     # ./spec/controllers/orgs_controller_spec.rb:73:in `block (3 levels) in <main>'

  3) OrgsController PUT /org/admin/:id/admin_update succeeds
     Failure/Error: return if logo.nil? || logo.height == 100

     Dragonfly::Shell::CommandFailed:
       Command failed: identify -ping -format \%m\ \%w\ \%h /tmp/RackMultipart20250324-4505-42hnxo.png, exit status: 127, error: sh: 1: identify: not found
     # ./app/models/org.rb:357:in `resize_image'
     # ./app/controllers/orgs_controller.rb:81:in `admin_update'
     # ./spec/controllers/orgs_controller_spec.rb:43:in `block (3 levels) in <main>'
```

--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -52,6 +52,11 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install libpq-dev
+    
+    # Install ImageMagick (for `identify` command)
+    - name: 'Install ImageMagick'
+      run: |
+        sudo apt-get install -y imagemagick
 
     # Copy all of the example configs over
     - name: 'Setup Default Configuration'
