[DATALAD RUNCMD] run codespell throughout fixing few left typos automagically
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "codespell -w",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -131,7 +131,7 @@ Metrics/MethodLength:
   Max: 20
 
 # mnicholson Oct. 6th 2021
-# Default lenght for block is 25 lines, which it would be very restrictive for
+# Default length for block is 25 lines, which it would be very restrictive for
 # the Rspec views methods. So I'll just exclude some files.
 Metrics/BlockLength:
   Exclude:
