--- a/config/initializers/wicked_pdf.rb.example
+++ b/config/initializers/wicked_pdf.rb.example
@@ -3,8 +3,8 @@
 module DMPRoadmap
   # WickedPDF gem configuration
   class Application < Rails::Application
-    WickedPdf.configure do |c|
-      c.exe_path = ENV.fetch('WICKED_PDF_PATH', '/usr/local/bin/wkhtmltopdf')
-    end
+    WickedPdf.config = {
+      exe_path: ENV.fetch('WICKED_PDF_PATH', '/usr/local/bin/wkhtmltopdf')
+    }
   end
 end
