New credential locations

--- a/.env.postgresql
+++ b/.env.postgresql
@@ -42,7 +42,7 @@ ROLLBAR_ENV=
 # customized content in ./app/views/branded and `app` is for the core roadmap translations.
 # Include your Translation.io API key for the appropriate domains:
 #    app => TRANSLATION_API_ROADMAP
-#    client => TRANSLATION_API_CLIENT
-DOMAIN=app
-TRANSLATION_API_ROADMAP=
-TRANSLATION_API_CLIENT=
+# #    client => TRANSLATION_API_CLIENT
+# DOMAIN=app
+# TRANSLATION_API_ROADMAP=
+# TRANSLATION_API_CLIENT=
