--- a/config/credentials.yml.sample
+++ b/config/credentials.yml.sample
@@ -9,7 +9,7 @@ recaptcha:
 
 # Database details
 database:
-    user_name: roadmap
+    username: roadmap
     password: password123
 
 # Dragonfly gem
