added local mac files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,6 @@ yarn-debug.log*
 
 # Ignore briley AWS cloud9 script to start the application
 cloud9-start.sh
+
+# ignore local mac files
+.DS_Store
