small adjustments to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ docker-compose.yml
 
 # Ignore all logfiles, tempfiles, public assets,
 /log/*.log
+/logs/*
 /tmp
 
 # Ignore public subdirectories
