--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ docker-compose.yml
 # Ignore bundler config
 /.bundle
 
+# Ignore custom gem file
+Gemfile.custom
+
 # Ignore all logfiles, tempfiles, public assets,
 /log/*.log
 /logs/*
