--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "DMPRoadmap",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "DMPRoadmap javascript dependencies",
   "main": "null",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
-    "lint": "yarn run eslint --ext .js app/javascript/**/*.js",
+    "lint": "eslint --ext .js app/javascript/**/*.js",
+    "lint:fix": "eslint --ext .js app/javascript/**/*.js --fix",
     "test": "karma start spec/karma/unit.js",
     "build": "webpack --config ./config/webpack/webpack.config.js",
-    "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "build:css:watch": "sass --watch --poll ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
   "babel": {
     "presets": [
@@ -30,49 +35,44 @@
   },
   "homepage": "https://github.com/DMPRoadmap/roadmap#readme",
   "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "@hotwired/turbo-rails": "^7.1.3",
+    "@hotwired/turbo-rails": "^8.0.16",
     "@popperjs/core": "^2.11.6",
-    "@rails/actioncable": "~7.1",
-    "@rails/activestorage": "~7.1",
+    "@rails/actioncable": "~8.0.200",
+    "@rails/activestorage": "~8.0.200",
     "@rails/ujs": "~7.1",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-select": "^1.13.18",
-    "chart.js": "^3.8.0",
+    "chart.js": "^4.5.0",
     "core-js": "^3.6.5",
-    "eslint": "^8.18.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-webpack-plugin": "^2.6.0",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-sass": "^0.0.1",
     "js-cookie": "^3.0.1",
-    "number-to-text": "^0.3.8",
-    "rails-erb-loader": "^5.5.2",
-    "regenerator-runtime": "^0.13.5",
-    "sass": "^1.57.1",
+    "number-to-text": "^0.4.1",
+    "regenerator-runtime": "^0.14.1",
     "timeago.js": "^4.0.2",
-    "tinymce": "^7.2.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "tinymce": "^7.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "eslint": "^8.18.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-webpack-plugin": "^2.6.0",
-    "jasmine": "^4.2.1",
-    "jasmine-core": "^4.2.0",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.30.1",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-macros": "^3.1.0",
+    "eslint": "9.30.1",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-webpack-plugin": "^5.0.2",
+    "globals": "16.3.0",
+    "jasmine": "^5.8.0",
+    "jasmine-core": "^5.8.0",
     "karma": "^6.3.14",
     "karma-babel-preprocessor": "^8.0.1",
     "karma-chrome-launcher": "^3.1.0",
@@ -81,9 +81,10 @@
     "karma-jasmine": "^5.1.0",
     "karma-jquery": "^0.2.4",
     "karma-json-fixtures-preprocessor": "^0.0.6",
-    "karma-webpack": "^5.0.0"
-  },
-  "resolutions": {
-    "webpack": "^5.75.0"
+    "karma-webpack": "^5.0.0",
+    "rails-erb-loader": "^5.5.2",
+    "sass": "^1.57.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^6.0.1"
   }
 }
