--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -1,23 +1,21 @@
 name: Brakeman
 
 on:
-  pull_request:
-    branches:
-      master
+  push:
+    branches: main
 
 jobs:
   brakeman:
-
     runs-on: ubuntu-24.04
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    # Will run Brakeman checks on dependencies
-    #   https://github.com/marketplace/actions/brakeman-action
-    - name: Brakeman
-      uses: artplan1/brakeman-action@v1.2.1
-      with:
-        flags: "--color"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Will run Brakeman checks on dependencies
+      #   https://github.com/marketplace/actions/brakeman-action
+      - name: Brakeman
+        uses: artplan1/brakeman-action@v1.2.1
+        with:
+          flags: "--color"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
