--- a/package.json
+++ b/package.json
@@ -56,21 +56,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.30.1",
     "babel-loader": "^10.0.0",
     "babel-plugin-macros": "^3.1.0",
-    "eslint": "9.30.1",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.32.0",
+    "eslint": "^9.35.0",
     "eslint-webpack-plugin": "^5.0.2",
-    "globals": "16.3.0",
+    "globals": "^16.4.0",
     "jasmine": "^5.8.0",
     "jasmine-core": "^5.8.0",
     "karma": "^6.3.14",
