Disable new Rubocop offences (for now)
- Commit 02a7cfcc0e5e2f09dfe660f0cffd5ec40d211bbf bumped the Rubocop version, which resulted in more offences.
- These offences should be re-enabled and addressed in the next release.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -141,6 +141,16 @@ Metrics/BlockLength:
 
   AllowedMethods: ['describe', 'context', 'task', 'namespace']
 
+# ----------
+# - NAMING -
+# ----------
+# TODO: Temporarily disabled for release v5.0.2
+Naming/MethodName:
+  Enabled: false
+# TODO: Temporarily disabled for release v5.0.2
+Naming/PredicateMethod:
+  Enabled: false
+
 # ------------
 # - SECURITY -
 # ------------
